syntax = "proto3";

package cart.v1;

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "shopsimple/common/v1/money.proto";

option go_package = "gen/go/shopsimple/cart/v1;cartv1";

// Cart service including all operations on user cart
service CartService {
  // Add product to cart
  rpc AddItem(ModifyCartRequest) returns (ModifyCartResponse) {
    option (google.api.http) = {
      post: "cart/v1/add"
      body: "*"
    };
  };

  // Deduct quantity from cart
  rpc DeductFromCart(ModifyCartRequest) returns (ModifyCartResponse) {
    option (google.api.http) = {
      post: "cart/v1/deduct"
      body: "*"
    };
  };

  // Remove item from cart
  rpc RemoveFromCart(RemoveFromCartRequest) returns (ModifyCartResponse) {
    option (google.api.http) = {
      post: "cart/v1/deduct"
      body: "*"
    };
  };

  // Get items in cart
  rpc GetCart(GetCartRequest) returns (GetCartResponse) {
    option (google.api.http) = {
      get: "cart/v1"
    };
  };

  // Clear items in the cart
  rpc Clear(GetCartRequest) returns (ModifyCartResponse) {
    option (google.api.http) = {
      post: "cart/v1/clear"
      body: "*"
    };
  }

  // Swaps cart from guest user id to authenticated user id
  rpc AssignToAuthUser(AssignToAuthUserRequest) returns (AssignToAuthUserResponse) {
    option (google.api.http) = {
      post: "cart/v1/swap"
      body: "*"
    };
  };
}

message Cart {
  string            user_id          = 1;
  repeated CartItem cart_items       = 2;
  money.v1.Money    cart_price_total = 3;
}

message CartItem {
  string         product_id   = 2;
  uint32         quantity     = 3;
  string         product_name = 4;
  money.v1.Money unit_price   = 5;
}

message ModifyCartRequest {
  string user_id    = 1;
  string product_id = 2;
  uint32 quantity   = 3;
}

message ModifyCartResponse {
  string product_id = 1;
}

message RemoveFromCartRequest {
  string user_id    = 1;
  string product_id = 2;
}

message GetCartRequest {
  string user_id = 1;
}

message GetCartResponse {
  Cart cart = 1;
}

message AssignToAuthUserRequest {
  string guest_user_id = 1;
  string auth_user_id  = 2;
}

message AssignToAuthUserResponse {
  string auth_user_id = 1;
}